# -*- python -*-

load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(default_visibility = ["//visibility:public"])

cmake(
    name = "proxsuite",
    cache_entries = {
        "CMAKE_BUILD_TYPE": "Release",
        "BUILD_TESTING": "OFF",
        "BUILD_PYTHON_INTERFACE": "OFF",
    },
    lib_source = ":proxsuite_srcs",
    out_headers_only = True
)

filegroup(
    name = "proxsuite_srcs",
    srcs = glob(["**"]),
    visibility = ["//cmake_defines:__subpackages__"],
)
